--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show_sql=true
 
+
+# TODO Append connection to DB
 spring.sql.init.mode=always
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
@@ -9,8 +15,9 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
 spring.config.activate.on-profile=ci,test
-spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:postgresql://localhost/java-shareit-add-controllers
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.h2.console.enabled=true
