--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
@@ -18,5 +17,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
 spring.datasource.password=test
-spring.datasource.driver-class-name=org.postgresql.Driver
+
 
