--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 spring.config.activate.on-profile=ci,test
-spring.datasource.url=jdbc:h2:file:~/h2/45
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:postgresql://localhost/45
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
