--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-
+#--
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:8080/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
+#--
 spring.config.activate.on-profile=ci,test
-spring.datasource.url=jdbc:h2:file:~/h2/45
-spring.datasource.username=sa
-spring.datasource.password=sa
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.username=test
+spring.datasource.password=test
