--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.sql.init.mode=always
 #--
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=shareit
-spring.datasource.password=shareit
+spring.datasource.username=purr
+spring.datasource.password=iamroot
 #--
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
