--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.8'
 services:
   gateway:
     build: gateway
-    image: gateway2
-    container_name: happy_allen
+    image: gateway
+    container_name: gateway
     ports:
       - "8080:8080"
     depends_on:
@@ -13,8 +13,8 @@ services:
 
   server:
     build: server
-    image: server3
-    container_name: affectionate_hertz
+    image: server
+    container_name: server
     ports:
       - "9090:9090"
     depends_on:
