--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,26 +2,26 @@ version: '3.8'
 services:
   gateway:
     build: gateway
-    image: gateway
+    image: letaat/gateway
     container_name: gateway
     ports:
       - "8080:8080"
-    depends_on:
-    - server
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
 
   server:
     build: server
-    image: server
+  #  tty: true
+    image: letaat/server
     container_name: server
     ports:
       - "9090:9090"
     depends_on:
     - db
+    - gateway
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-      - spring.datasource.username=root
+      - spring.datasource.username=postgres
       - spring.datasource.password=root
 
   db:
@@ -31,5 +31,5 @@ services:
       - "6541:5432"
     environment:
       - POSTGRES_DB=shareit
-      - POSTGRES_USER=root
+      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=root
