--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.8'
 services:
   gateway:
     build: gateway
-    image: letaat/gateway:v7
-    container_name: gateway1
+    image: letaat/gateway:v10
+    container_name: gateway
     ports:
       - "8080:8080"
     environment:
